correcting banner pic alignments

--- a/src/App.css
+++ b/src/App.css
@@ -31,7 +31,6 @@ body {
   width: 100%;
   height: 100vh;
   padding: 8rem;
-  padding-bottom: 15vw;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -41,7 +40,9 @@ body {
 
 .Lbanner {
   background: rgba(0, 0, 0, 0.65) url("./assets/bannerL.jpg");
-  background-position: center;
+  background-position: bottom;
+  background-size: contain;
+  background-repeat:repeat;
 }
 
 .Rbanner {
